# pycounts_rbattu

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_rbattu/: __init__.py
tests/: test_pycounts_rbattu.py
