[tool.poetry]
name = "pycounts_rbattu"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Riddhi Battu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.4"
numpy = {version = "1.21.5", python = ">=3.7, <3.11"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
